<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:title="Quiz">
            <menu>
                <item
                    android:id="@+id/nav_resultado"
                    android:icon="@drawable/ic_menu_tarefas"
                    android:title="@string/menu_resultado_final" />
            </menu>
        </item>
        <item android:title="Conta">
            <menu>
                <item
                    android:id="@+id/nav_configuracoes"
                    android:icon="@drawable/ic_menu_config"
                    android:title="@string/menu_configuracoes" />
                <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/ic_menu_exit"
                    android:title="@string/menu_exit" />
            </menu>
        </item>
    </group>

</menu>
