<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <FrameLayout
        android:id="@+id/frameLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/ecology" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:text="@string/res_titulo"
                android:textAllCaps="true"
                android:textColor="#1BA31E"
                android:textSize="16sp"
                app:fontFamily="@font/lemonada_semibold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hintLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/res_email"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/loginEmail"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="30dp"
                    android:padding="15dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hintLoginSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/res_senha"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/loginSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:padding="15dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/btnEntrar"
                android:layout_width="match_parent"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:backgroundTint="@color/colorBtnEntrar"
                android:textColor="#fff"
                android:text="@string/res_btnEntrar" />

            <android.support.design.button.MaterialButton
                android:id="@+id/btnNovoCadastro"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginHorizontal="30dp"
                android:text="@string/res_btnNovoCadastro"
                android:textColor="@color/colorBtnCadastrar"
                android:textSize="12sp" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameCadastro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="30dp"
                android:text="@string/res_cadastro"
                android:textAllCaps="true"
                android:textColor="#1BA31E"
                android:textSize="20sp"
                app:fontFamily="@font/lemonada_semibold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hintCadNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/res_nome"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cadNome"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="30dp"
                    android:padding="15dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hintCadEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/res_email"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cadEmail"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="30dp"
                    android:padding="15dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hintCadSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/res_senha"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cadSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:padding="15dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hintCadConfirma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/res_confirma"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cadConfirma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:padding="15dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/btnCadastrar"
                android:layout_width="match_parent"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:backgroundTint="@color/colorBtnEntrar"
                android:textColor="#fff"
                android:text="@string/res_btnCadastrar" />

            <android.support.design.button.MaterialButton
                android:id="@+id/btnCancelar"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginHorizontal="30dp"
                android:text="@string/res_btnCancelar"
                android:textColor="@color/colorBtnCancelar"
                android:textSize="12sp" />

        </LinearLayout>

    </FrameLayout>


</LinearLayout>